# mila-docs-chatbot

./: .gitignore  README.md  env  pinned-requirements.txt  pyproject.toml  requirements.txt
ansible/: README.md
ansible-role/: README.md
ansible-role/defaults/: main.yml
ansible-role/meta/: main.yml
ansible-role/tasks/: main.yml
ansible-role/templates/: overrides.yaml
ansible-role/vars/: main.yml
ansible/playbooks/: install.yml
buster_app/: __main__.py  cfg.py
buster_service/: __init__.py  __main__.py  config.py
buster_service/acquire/: refresh-repo.sh  sphinx.py
buster_service/app/: cfg.py  chat.py  style.css
config/: env  mila-config.yaml  sphinx-docs.yaml
install/: activate.sh  assudo.sh  install.sh  remote-install.sh  service.sh  setup.sh
scripts/: acquire.sh  install.sh  remote-install.sh  web-interface.sh
systemd/: buster-regen-docs.service  buster-regen-docs.timer  buster-web.service
