[tool.poetry]
name = "buster-service"
version = "0.1.0"
description = "Chatbot service for Mila"
authors = ["Mila"]
license = "MIT"
readme = "README.md"
packages = [{include = "buster_service"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pyyaml = "^6.0.1"
buster-doctalk = "^1.0.25"
lxml = "^4.9.3"
ovld = "^0.3.2"
grizzlaxy = {version = "^0.1.0", extras = ["sentry"]}
starbear = "^0.1.0"
starlette = "0.27.0"
markdown = "^3.4.4"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
